@@ -22,8 +22,7 @@
             multiple components with a proprietary config file.  More
             information can be found <a
             href="../tools/CIAO_single_com_server/README"> here </a>
-            It's command line processing routine still needs to be
-            improved. Next up, a trivial HomeFinder interface that can
+            Next up, a trivial HomeFinder interface that can
             simply forward requests to a Naming Service.<p>
         <li>Dec 11 2002 - The server implementation in the HelloWorld
             example is now a generic one-component server.  It can be
@@ -260,7 +259,7 @@ certain release together.  All interfaces and types are under
 <hr>
 <address></address>
 <!-- hhmts start -->
-Last modified: Sun Dec 15 15:29:48 Central Standard Time 2002
+Last modified: Mon Dec 16 11:01:49 Central Standard Time 2002
 <!-- hhmts end -->
 <address>Nanbor Wang &lt;nanbor@cs.wustl.edu&gt;</address>
 </body> </html>
